@@ -55,14 +55,14 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.Path;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Optional;
 import java.util.Set;
 import java.util.SortedSet;
+import java.util.TreeSet;
 import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -93,6 +93,7 @@ public class PluginsTest {
         pluginProps.put(WorkerConfig.PLUGIN_PATH_CONFIG, TestPlugins.pluginPathJoined());
         plugins = new Plugins(pluginProps);
         props = new HashMap<>(pluginProps);
+        props.put(WorkerConfig.BOOTSTRAP_SERVERS_CONFIG, "localhost:9092");
         props.put(WorkerConfig.KEY_CONVERTER_CLASS_CONFIG, TestConverter.class.getName());
         props.put(WorkerConfig.VALUE_CONVERTER_CLASS_CONFIG, TestConverter.class.getName());
         props.put("key.converter." + JsonConverterConfig.SCHEMAS_ENABLE_CONFIG, "true");
@@ -106,17 +107,17 @@ public class PluginsTest {
         SortedSet<PluginDesc<SinkConnector>> sinkConnectors = (SortedSet<PluginDesc<SinkConnector>>) plugins.sinkConnectors();
         missingPluginClass = sinkConnectors.first().className();
         nonEmpty = new PluginScanResult(
-                sinkConnectors,
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet()
+            sinkConnectors,
+            new TreeSet<>(),
+            new TreeSet<>(),
+            new TreeSet<>(),
+            new TreeSet<>(),
+            new TreeSet<>(),
+            new TreeSet<>(),
+            new TreeSet<>(),
+            new TreeSet<>()
         );
-        empty = new PluginScanResult(Collections.emptyList());
+        empty = new PluginScanResult(List.of());
 
         createConfig();
     }
@@ -140,7 +141,7 @@ public class PluginsTest {
 
     @Test
     public void shouldInstantiateAndConfigureInternalConverters() {
-        instantiateAndConfigureInternalConverter(true, Collections.singletonMap(JsonConverterConfig.SCHEMAS_ENABLE_CONFIG, "false"));
+        instantiateAndConfigureInternalConverter(true, Map.of(JsonConverterConfig.SCHEMAS_ENABLE_CONFIG, "false"));
         // Validate schemas.enable is set to false
         assertEquals("false", internalConverter.configs.get(JsonConverterConfig.SCHEMAS_ENABLE_CONFIG));
     }
@@ -207,7 +208,7 @@ public class PluginsTest {
     public void shouldThrowIfPluginThrows() {
         assertThrows(ConnectException.class, () -> plugins.newPlugin(
             TestPlugin.ALWAYS_THROW_EXCEPTION.className(),
-            new AbstractConfig(new ConfigDef(), Collections.emptyMap()),
+            new AbstractConfig(new ConfigDef(), Map.of()),
             Converter.class
         ));
     }
@@ -216,7 +217,7 @@ public class PluginsTest {
     public void shouldFindCoLocatedPluginIfBadPackaging() {
         Converter converter = plugins.newPlugin(
                 TestPlugin.BAD_PACKAGING_CO_LOCATED.className(),
-                new AbstractConfig(new ConfigDef(), Collections.emptyMap()),
+                new AbstractConfig(new ConfigDef(), Map.of()),
                 Converter.class
         );
         assertNotNull(converter);
@@ -226,7 +227,7 @@ public class PluginsTest {
     public void shouldThrowIfPluginMissingSuperclass() {
         assertThrows(ConnectException.class, () -> plugins.newPlugin(
                 TestPlugin.BAD_PACKAGING_MISSING_SUPERCLASS.className(),
-                new AbstractConfig(new ConfigDef(), Collections.emptyMap()),
+                new AbstractConfig(new ConfigDef(), Map.of()),
                 Converter.class
         ));
     }
@@ -242,7 +243,7 @@ public class PluginsTest {
     public void shouldThrowIfStaticInitializerThrowsServiceLoader() {
         assertThrows(ConnectException.class, () -> plugins.newPlugin(
                 TestPlugin.BAD_PACKAGING_STATIC_INITIALIZER_THROWS_REST_EXTENSION.className(),
-                new AbstractConfig(new ConfigDef(), Collections.emptyMap()),
+                new AbstractConfig(new ConfigDef(), Map.of()),
                 ConnectRestExtension.class
         ));
     }
@@ -300,7 +301,7 @@ public class PluginsTest {
         // Plugins are not isolated from other instances of their own class.
         Converter firstPlugin = plugins.newPlugin(
             TestPlugin.ALIASED_STATIC_FIELD.className(),
-            new AbstractConfig(new ConfigDef(), Collections.emptyMap()),
+            new AbstractConfig(new ConfigDef(), Map.of()),
             Converter.class
         );
 
@@ -308,7 +309,7 @@ public class PluginsTest {
 
         Converter secondPlugin = plugins.newPlugin(
             TestPlugin.ALIASED_STATIC_FIELD.className(),
-            new AbstractConfig(new ConfigDef(), Collections.emptyMap()),
+            new AbstractConfig(new ConfigDef(), Map.of()),
             Converter.class
         );
 
@@ -323,7 +324,7 @@ public class PluginsTest {
     public void newPluginShouldServiceLoadWithPluginClassLoader() {
         Converter plugin = plugins.newPlugin(
             TestPlugin.SERVICE_LOADER.className(),
-            new AbstractConfig(new ConfigDef(), Collections.emptyMap()),
+            new AbstractConfig(new ConfigDef(), Map.of()),
             Converter.class
         );
 
@@ -339,7 +340,7 @@ public class PluginsTest {
     public void newPluginShouldInstantiateWithPluginClassLoader() {
         Converter plugin = plugins.newPlugin(
             TestPlugin.ALIASED_STATIC_FIELD.className(),
-            new AbstractConfig(new ConfigDef(), Collections.emptyMap()),
+            new AbstractConfig(new ConfigDef(), Map.of()),
             Converter.class
         );
 
@@ -355,7 +356,7 @@ public class PluginsTest {
     @Test
     public void newConverterShouldConfigureWithPluginClassLoader() {
         props.put(WorkerConfig.KEY_CONVERTER_CLASS_CONFIG, TestPlugin.SAMPLING_CONVERTER.className());
-        ClassLoader classLoader = plugins.delegatingLoader().pluginClassLoader(TestPlugin.SAMPLING_CONVERTER.className());
+        ClassLoader classLoader = plugins.delegatingLoader().pluginClassLoader(TestPlugin.SAMPLING_CONVERTER.className(), null, Optional.empty());
         try (LoaderSwap loaderSwap = plugins.withClassLoader(classLoader)) {
             createConfig();
         }
@@ -377,7 +378,7 @@ public class PluginsTest {
         String providerPrefix = "some.provider";
         props.put(providerPrefix + ".class", TestPlugin.SAMPLING_CONFIG_PROVIDER.className());
 
-        PluginClassLoader classLoader = plugins.delegatingLoader().pluginClassLoader(TestPlugin.SAMPLING_CONFIG_PROVIDER.className());
+        PluginClassLoader classLoader = plugins.delegatingLoader().pluginClassLoader(TestPlugin.SAMPLING_CONFIG_PROVIDER.className(), null, Optional.empty());
         assertNotNull(classLoader);
         try (LoaderSwap loaderSwap = plugins.withClassLoader(classLoader)) {
             createConfig();
@@ -398,7 +399,7 @@ public class PluginsTest {
     @Test
     public void newHeaderConverterShouldConfigureWithPluginClassLoader() {
         props.put(WorkerConfig.HEADER_CONVERTER_CLASS_CONFIG, TestPlugin.SAMPLING_HEADER_CONVERTER.className());
-        ClassLoader classLoader = plugins.delegatingLoader().pluginClassLoader(TestPlugin.SAMPLING_HEADER_CONVERTER.className());
+        ClassLoader classLoader = plugins.delegatingLoader().pluginClassLoader(TestPlugin.SAMPLING_HEADER_CONVERTER.className(), null, Optional.empty());
         try (LoaderSwap loaderSwap = plugins.withClassLoader(classLoader)) {
             createConfig();
         }
@@ -428,7 +429,7 @@ public class PluginsTest {
     @Test
     public void newPluginsShouldConfigureWithPluginClassLoader() {
         List<Configurable> configurables = plugins.newPlugins(
-            Collections.singletonList(TestPlugin.SAMPLING_CONFIGURABLE.className()),
+            List.of(TestPlugin.SAMPLING_CONFIGURABLE.className()),
             config,
             Configurable.class
         );
@@ -590,13 +591,13 @@ public class PluginsTest {
 
     @Test
     public void testAliasesInConverters() throws ClassNotFoundException {
-        ClassLoader connectorLoader = plugins.connectorLoader(TestPlugin.SAMPLING_CONNECTOR.className());
+        ClassLoader connectorLoader = plugins.connectorLoader(TestPlugin.SAMPLING_CONNECTOR.className(), null);
         try (LoaderSwap loaderSwap = plugins.withClassLoader(connectorLoader)) {
             String configKey = "config.key";
             String alias = "SamplingConverter";
             assertTrue(TestPlugin.SAMPLING_CONVERTER.className().contains(alias));
             ConfigDef def = new ConfigDef().define(configKey, ConfigDef.Type.CLASS, ConfigDef.Importance.HIGH, "docstring");
-            AbstractConfig config = new AbstractConfig(def, Collections.singletonMap(configKey, alias));
+            AbstractConfig config = new AbstractConfig(def, Map.of(configKey, alias));
 
             assertNotNull(config.getClass(configKey));
             assertNotNull(config.getConfiguredInstance(configKey, Converter.class));
@@ -625,7 +626,7 @@ public class PluginsTest {
 
         // Initialize Plugins object with parent class loader in the class loader tree. This is
         // to simulate the situation where jars exist on both system classpath and plugin path.
-        Map<String, String> pluginProps = Collections.singletonMap(
+        Map<String, String> pluginProps = Map.of(
                 WorkerConfig.PLUGIN_PATH_CONFIG,
                 TestPlugins.pluginPathJoined(childResource)
         );
@@ -638,14 +639,14 @@ public class PluginsTest {
 
         Converter converter = plugins.newPlugin(
                 className,
-                new AbstractConfig(new ConfigDef(), Collections.emptyMap()),
+                new AbstractConfig(new ConfigDef(), Map.of()),
                 Converter.class
         );
         // Verify the version was read from the correct resource
         assertEquals(expectedVersions[0],
                 new String(converter.fromConnectData(null, null, null)));
         // When requesting multiple resources, they should be listed in the correct order
-        assertEquals(Arrays.asList(expectedVersions),
+        assertEquals(List.of(expectedVersions),
                 converter.toConnectData(null, null).value());
     }
 
