@@ -71,7 +71,6 @@ import org.mockito.quality.Strictness;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -86,7 +85,6 @@ import java.util.stream.Stream;
 
 import jakarta.ws.rs.BadRequestException;
 
-import static java.util.Arrays.asList;
 import static org.apache.kafka.connect.runtime.rest.RestServer.DEFAULT_HEALTH_CHECK_TIMEOUT_MS;
 import static org.apache.kafka.connect.runtime.rest.RestServer.DEFAULT_REST_REQUEST_TIMEOUT_MS;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -167,37 +165,37 @@ public class ConnectorPluginsResourceTest {
         ConfigDef connectorConfigDef = ConnectorConfig.configDef();
         List<ConfigValue> connectorConfigValues = connectorConfigDef.validate(PROPS);
         List<ConfigValue> partialConnectorConfigValues = connectorConfigDef.validate(PARTIAL_PROPS);
-        ConfigInfos result = AbstractHerder.generateResult(ConnectorPluginsResourceTestConnector.class.getName(), connectorConfigDef.configKeys(), connectorConfigValues, Collections.emptyList());
-        ConfigInfos partialResult = AbstractHerder.generateResult(ConnectorPluginsResourceTestConnector.class.getName(), connectorConfigDef.configKeys(), partialConnectorConfigValues, Collections.emptyList());
-        List<ConfigInfo> configs = new LinkedList<>(result.values());
-        List<ConfigInfo> partialConfigs = new LinkedList<>(partialResult.values());
+        ConfigInfos result = AbstractHerder.generateResult(ConnectorPluginsResourceTestConnector.class.getName(), connectorConfigDef.configKeys(), connectorConfigValues, List.of());
+        ConfigInfos partialResult = AbstractHerder.generateResult(ConnectorPluginsResourceTestConnector.class.getName(), connectorConfigDef.configKeys(), partialConnectorConfigValues, List.of());
+        List<ConfigInfo> configs = new LinkedList<>(result.configs());
+        List<ConfigInfo> partialConfigs = new LinkedList<>(partialResult.configs());
 
-        ConfigKeyInfo configKeyInfo = new ConfigKeyInfo("test.string.config", "STRING", true, null, "HIGH", "Test configuration for string type.", null, -1, "NONE", "test.string.config", Collections.emptyList());
-        ConfigValueInfo configValueInfo = new ConfigValueInfo("test.string.config", "testString", Collections.emptyList(), Collections.emptyList(), true);
+        ConfigKeyInfo configKeyInfo = new ConfigKeyInfo("test.string.config", "STRING", true, null, "HIGH", "Test configuration for string type.", null, -1, "NONE", "test.string.config", List.of());
+        ConfigValueInfo configValueInfo = new ConfigValueInfo("test.string.config", "testString", List.of(), List.of(), true);
         ConfigInfo configInfo = new ConfigInfo(configKeyInfo, configValueInfo);
         configs.add(configInfo);
         partialConfigs.add(configInfo);
 
-        configKeyInfo = new ConfigKeyInfo("test.int.config", "INT", true, null, "MEDIUM", "Test configuration for integer type.", "Test", 1, "MEDIUM", "test.int.config", Collections.emptyList());
-        configValueInfo = new ConfigValueInfo("test.int.config", "1", asList("1", "2", "3"), Collections.emptyList(), true);
+        configKeyInfo = new ConfigKeyInfo("test.int.config", "INT", true, null, "MEDIUM", "Test configuration for integer type.", "Test", 1, "MEDIUM", "test.int.config", List.of());
+        configValueInfo = new ConfigValueInfo("test.int.config", "1", List.of("1", "2", "3"), List.of(), true);
         configInfo = new ConfigInfo(configKeyInfo, configValueInfo);
         configs.add(configInfo);
         partialConfigs.add(configInfo);
 
-        configKeyInfo = new ConfigKeyInfo("test.string.config.default", "STRING", false, "", "LOW", "Test configuration with default value.", null, -1, "NONE", "test.string.config.default", Collections.emptyList());
-        configValueInfo = new ConfigValueInfo("test.string.config.default", "", Collections.emptyList(), Collections.emptyList(), true);
+        configKeyInfo = new ConfigKeyInfo("test.string.config.default", "STRING", false, "", "LOW", "Test configuration with default value.", null, -1, "NONE", "test.string.config.default", List.of());
+        configValueInfo = new ConfigValueInfo("test.string.config.default", "", List.of(), List.of(), true);
         configInfo = new ConfigInfo(configKeyInfo, configValueInfo);
         configs.add(configInfo);
         partialConfigs.add(configInfo);
 
-        configKeyInfo = new ConfigKeyInfo("test.list.config", "LIST", true, null, "HIGH", "Test configuration for list type.", "Test", 2, "LONG", "test.list.config", Collections.emptyList());
-        configValueInfo = new ConfigValueInfo("test.list.config", "a,b", asList("a", "b", "c"), Collections.emptyList(), true);
+        configKeyInfo = new ConfigKeyInfo("test.list.config", "LIST", true, null, "HIGH", "Test configuration for list type.", "Test", 2, "LONG", "test.list.config", List.of());
+        configValueInfo = new ConfigValueInfo("test.list.config", "a,b", List.of("a", "b", "c"), List.of(), true);
         configInfo = new ConfigInfo(configKeyInfo, configValueInfo);
         configs.add(configInfo);
         partialConfigs.add(configInfo);
 
-        CONFIG_INFOS = new ConfigInfos(ConnectorPluginsResourceTestConnector.class.getName(), ERROR_COUNT, Collections.singletonList("Test"), configs);
-        PARTIAL_CONFIG_INFOS = new ConfigInfos(ConnectorPluginsResourceTestConnector.class.getName(), PARTIAL_CONFIG_ERROR_COUNT, Collections.singletonList("Test"), partialConfigs);
+        CONFIG_INFOS = new ConfigInfos(ConnectorPluginsResourceTestConnector.class.getName(), ERROR_COUNT, List.of("Test"), configs);
+        PARTIAL_CONFIG_INFOS = new ConfigInfos(ConnectorPluginsResourceTestConnector.class.getName(), PARTIAL_CONFIG_ERROR_COUNT, List.of("Test"), partialConfigs);
     }
 
     private final Herder herder = mock(DistributedHerder.class);
@@ -242,7 +240,7 @@ public class ConnectorPluginsResourceTest {
                 ConnectorPluginsResourceTestConnector.class.getName(),
                 resultConfigKeys,
                 configValues,
-                Collections.singletonList("Test")
+                List.of("Test")
             );
             configInfosCallback.getValue().onCompletion(null, configInfos);
             return null;
@@ -258,8 +256,8 @@ public class ConnectorPluginsResourceTest {
         assertEquals(PARTIAL_CONFIG_INFOS.errorCount(), configInfos.errorCount());
         assertEquals(PARTIAL_CONFIG_INFOS.groups(), configInfos.groups());
         assertEquals(
-            new HashSet<>(PARTIAL_CONFIG_INFOS.values()),
-            new HashSet<>(configInfos.values())
+            new HashSet<>(PARTIAL_CONFIG_INFOS.configs()),
+            new HashSet<>(configInfos.configs())
         );
         verify(herder).validateConnectorConfig(eq(PARTIAL_PROPS), any(), anyBoolean());
     }
@@ -286,7 +284,7 @@ public class ConnectorPluginsResourceTest {
                     ConnectorPluginsResourceTestConnector.class.getName(),
                     resultConfigKeys,
                     configValues,
-                    Collections.singletonList("Test")
+                    List.of("Test")
             );
             configInfosCallback.getValue().onCompletion(null, configInfos);
             return null;
@@ -300,7 +298,7 @@ public class ConnectorPluginsResourceTest {
         assertEquals(CONFIG_INFOS.name(), configInfos.name());
         assertEquals(0, configInfos.errorCount());
         assertEquals(CONFIG_INFOS.groups(), configInfos.groups());
-        assertEquals(new HashSet<>(CONFIG_INFOS.values()), new HashSet<>(configInfos.values()));
+        assertEquals(new HashSet<>(CONFIG_INFOS.configs()), new HashSet<>(configInfos.configs()));
         verify(herder).validateConnectorConfig(eq(PROPS), any(), anyBoolean());
     }
 
@@ -326,7 +324,7 @@ public class ConnectorPluginsResourceTest {
                     ConnectorPluginsResourceTestConnector.class.getName(),
                     resultConfigKeys,
                     configValues,
-                    Collections.singletonList("Test")
+                    List.of("Test")
             );
             configInfosCallback.getValue().onCompletion(null, configInfos);
             return null;
@@ -340,7 +338,7 @@ public class ConnectorPluginsResourceTest {
         assertEquals(CONFIG_INFOS.name(), configInfos.name());
         assertEquals(0, configInfos.errorCount());
         assertEquals(CONFIG_INFOS.groups(), configInfos.groups());
-        assertEquals(new HashSet<>(CONFIG_INFOS.values()), new HashSet<>(configInfos.values()));
+        assertEquals(new HashSet<>(CONFIG_INFOS.configs()), new HashSet<>(configInfos.configs()));
         verify(herder).validateConnectorConfig(eq(PROPS), any(), anyBoolean());
     }
 
@@ -374,8 +372,8 @@ public class ConnectorPluginsResourceTest {
         ClassLoader classLoader = ConnectorPluginsResourceTest.class.getClassLoader();
         PluginInfo sinkInfo = new PluginInfo(new PluginDesc<>(SampleSinkConnector.class, SampleSinkConnector.VERSION, PluginType.SINK, classLoader));
         PluginInfo sourceInfo = new PluginInfo(new PluginDesc<>(SampleSourceConnector.class, SampleSourceConnector.VERSION, PluginType.SOURCE, classLoader));
-        assertEquals(PluginType.SINK.toString(), sinkInfo.type());
-        assertEquals(PluginType.SOURCE.toString(), sourceInfo.type());
+        assertEquals(PluginType.SINK.toString(), sinkInfo.type().toString());
+        assertEquals(PluginType.SOURCE.toString(), sourceInfo.type().toString());
         assertEquals(SampleSinkConnector.VERSION, sinkInfo.version());
         assertEquals(SampleSourceConnector.VERSION, sourceInfo.version());
         assertEquals(SampleSinkConnector.class.getName(), sinkInfo.className());
@@ -400,6 +398,22 @@ public class ConnectorPluginsResourceTest {
             ConnectorType.UNKNOWN,
             objectMapper.readValue(serializedUnknown, ConnectorType.class)
         );
+    }
+
+    @Test
+    public void testConnectorPluginsEndpointReturnsLowercaseTypeInJson() throws Exception {
+        // Call the actual endpoint method
+        List<PluginInfo> plugins = connectorPluginsResource.listConnectorPlugins(true);
+
+        // Serialize the response to JSON (simulating what the REST API does)
+        final ObjectMapper objectMapper = new ObjectMapper();
+        String json = objectMapper.writeValueAsString(plugins);
+
+        // Verify the JSON contains lowercase type fields
+        assertTrue(json.contains("\"type\":\"sink\""),
+            "Expected JSON to contain '\"type\":\"sink\"' but got: " + json);
+        assertTrue(json.contains("\"type\":\"source\""),
+            "Expected JSON to contain '\"type\":\"source\"' but got: " + json);
     }
 
     @Test
@@ -493,7 +507,7 @@ public class ConnectorPluginsResourceTest {
 
         @Override
         public List<Object> validValues(String name, Map<String, Object> parsedConfig) {
-            return asList(1, 2, 3);
+            return List.of(1, 2, 3);
         }
 
         @Override
@@ -505,7 +519,7 @@ public class ConnectorPluginsResourceTest {
     private static class ListRecommender implements Recommender {
         @Override
         public List<Object> validValues(String name, Map<String, Object> parsedConfig) {
-            return asList("a", "b", "c");
+            return List.of("a", "b", "c");
         }
 
         @Override
