@@ -59,18 +59,19 @@ import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Properties;
 import java.util.Set;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import joptsimple.ArgumentAcceptingOptionSpec;
 import joptsimple.OptionSpec;
@@ -112,11 +113,7 @@ public abstract class TopicCommand {
             }
         } catch (ExecutionException e) {
             Throwable cause = e.getCause();
-            if (cause != null) {
-                printException(cause);
-            } else {
-                printException(e);
-            }
+            printException(Objects.requireNonNullElse(cause, e));
             exitCode = 1;
         } catch (Throwable e) {
             printException(e);
@@ -157,12 +154,11 @@ public abstract class TopicCommand {
         return ret;
     }
 
-    @SuppressWarnings("deprecation")
     private static Properties parseTopicConfigsToBeAdded(TopicCommandOptions opts) {
-        List<List<String>> configsToBeAdded = opts.topicConfig().orElse(Collections.emptyList())
+        List<List<String>> configsToBeAdded = opts.topicConfig().orElse(List.of())
             .stream()
-            .map(s -> Arrays.asList(s.split("\\s*=\\s*")))
-            .collect(Collectors.toList());
+            .map(s -> List.of(s.split("\\s*=\\s*")))
+            .toList();
 
         if (!configsToBeAdded.stream().allMatch(config -> config.size() == 2)) {
             throw new IllegalArgumentException("requirement failed: Invalid topic config: all configs to be added must be in the format \"key=val\".");
@@ -251,20 +247,20 @@ public abstract class TopicCommand {
 
         private final TopicCommandOptions opts;
 
-        public CommandTopicPartition(TopicCommandOptions options) {
+        CommandTopicPartition(TopicCommandOptions options) {
             opts = options;
             name = options.topic().get();
             partitions = options.partitions();
             replicationFactor = options.replicationFactor();
-            replicaAssignment = options.replicaAssignment().orElse(Collections.emptyMap());
+            replicaAssignment = options.replicaAssignment().orElse(Map.of());
             configsToAdd = parseTopicConfigsToBeAdded(options);
         }
 
-        public boolean hasReplicaAssignment() {
+        boolean hasReplicaAssignment() {
             return !replicaAssignment.isEmpty();
         }
 
-        public boolean ifTopicDoesntExist() {
+        boolean ifTopicDoesntExist() {
             return opts.ifNotExists();
         }
     }
@@ -275,18 +271,16 @@ public abstract class TopicCommand {
         private final int numPartitions;
         private final int replicationFactor;
         private final Config config;
-        private final boolean markedForDeletion;
 
-        public TopicDescription(String topic, Uuid topicId, int numPartitions, int replicationFactor, Config config, boolean markedForDeletion) {
+        TopicDescription(String topic, Uuid topicId, int numPartitions, int replicationFactor, Config config) {
             this.topic = topic;
             this.topicId = topicId;
             this.numPartitions = numPartitions;
             this.replicationFactor = replicationFactor;
             this.config = config;
-            this.markedForDeletion = markedForDeletion;
         }
 
-        public void printDescription() {
+        void printDescription() {
             String configsAsString = config.entries().stream()
                 .filter(config -> !config.isDefault())
                 .map(ce -> ce.name() + "=" + ce.value())
@@ -297,7 +291,6 @@ public abstract class TopicCommand {
             System.out.print("\tPartitionCount: " + numPartitions);
             System.out.print("\tReplicationFactor: " + replicationFactor);
             System.out.print("\tConfigs: " + configsAsString);
-            System.out.print(markedForDeletion ? "\tMarkedForDeletion: true" : "");
             System.out.println();
         }
     }
@@ -306,46 +299,43 @@ public abstract class TopicCommand {
         private final String topic;
         private final TopicPartitionInfo info;
         private final Config config;
-        private final boolean markedForDeletion;
         private final PartitionReassignment reassignment;
 
         PartitionDescription(String topic,
                              TopicPartitionInfo info,
                              Config config,
-                             boolean markedForDeletion,
                              PartitionReassignment reassignment) {
             this.topic = topic;
             this.info = info;
             this.config = config;
-            this.markedForDeletion = markedForDeletion;
             this.reassignment = reassignment;
         }
 
-        public int minIsrCount() {
+        int minIsrCount() {
             return Integer.parseInt(config.get(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG).value());
         }
 
-        public boolean isUnderReplicated() {
+        boolean isUnderReplicated() {
             return getReplicationFactor(info, reassignment) - info.isr().size() > 0;
         }
 
-        public boolean hasLeader() {
+        boolean hasLeader() {
             return info.leader() != null;
         }
 
-        public boolean isUnderMinIsr() {
-            return !hasLeader() ||  info.isr().size() < minIsrCount();
+        boolean isUnderMinIsr() {
+            return !hasLeader() || info.isr().size() < minIsrCount();
         }
 
-        public boolean isAtMinIsrPartitions() {
+        boolean isAtMinIsrPartitions() {
             return minIsrCount() == info.isr().size();
         }
 
-        public boolean hasUnavailablePartitions(Set<Integer> liveBrokers) {
+        boolean hasUnavailablePartitions(Set<Integer> liveBrokers) {
             return !hasLeader() || !liveBrokers.contains(info.leader().id());
         }
 
-        public void printDescription() {
+        void printDescription() {
             System.out.print("\tTopic: " + topic);
             System.out.print("\tPartition: " + info.partition());
             System.out.print("\tLeader: " + (hasLeader() ? info.leader().id() : "none"));
@@ -357,10 +347,10 @@ public abstract class TopicCommand {
                 .collect(Collectors.joining(",")));
             if (reassignment != null) {
                 System.out.print("\tAdding Replicas: " + reassignment.addingReplicas().stream()
-                    .map(node -> node.toString())
+                    .map(Object::toString)
                     .collect(Collectors.joining(",")));
                 System.out.print("\tRemoving Replicas: " + reassignment.removingReplicas().stream()
-                    .map(node -> node.toString())
+                    .map(Object::toString)
                     .collect(Collectors.joining(",")));
             }
 
@@ -379,7 +369,6 @@ public abstract class TopicCommand {
             } else {
                 System.out.print("\tLastKnownElr: N/A");
             }
-            System.out.print(markedForDeletion ? "\tMarkedForDeletion: true" : "");
             System.out.println();
         }
     }
@@ -390,7 +379,7 @@ public abstract class TopicCommand {
         private final boolean describeConfigs;
         private final boolean describePartitions;
 
-        public DescribeOptions(TopicCommandOptions opts, Set<Integer> liveBrokers) {
+        DescribeOptions(TopicCommandOptions opts, Set<Integer> liveBrokers) {
             this.opts = opts;
             this.liveBrokers = liveBrokers;
             this.describeConfigs = !opts.reportUnavailablePartitions() &&
@@ -424,32 +413,27 @@ public abstract class TopicCommand {
                 shouldPrintAtMinIsrPartitions(partitionDesc);
         }
 
-        public void maybePrintPartitionDescription(PartitionDescription desc) {
+        void maybePrintPartitionDescription(PartitionDescription desc) {
             if (shouldPrintTopicPartition(desc)) {
                 desc.printDescription();
             }
         }
     }
 
-    public static class TopicService implements AutoCloseable {
+    static class TopicService implements AutoCloseable {
         private final Admin adminClient;
 
-        public TopicService(Properties commandConfig, Optional<String> bootstrapServer) {
-            this.adminClient = createAdminClient(commandConfig, bootstrapServer);
+        TopicService(Properties commandConfig, Optional<String> bootstrapServer) {
+            bootstrapServer.ifPresent(s -> commandConfig.put(AdminClientConfig.BOOTSTRAP_SERVERS_CONFIG, s));
+
+            adminClient = Admin.create(commandConfig);
         }
 
-        public TopicService(Admin admin) {
-            this.adminClient = admin;
+        TopicService(Admin admin) {
+            adminClient = admin;
         }
 
-        private static Admin createAdminClient(Properties commandConfig, Optional<String> bootstrapServer) {
-            if (bootstrapServer.isPresent()) {
-                commandConfig.put(AdminClientConfig.BOOTSTRAP_SERVERS_CONFIG, bootstrapServer.get());
-            }
-            return Admin.create(commandConfig);
-        }
-
-        public void createTopic(TopicCommandOptions opts) throws Exception {
+        void createTopic(TopicCommandOptions opts) throws Exception {
             CommandTopicPartition topic = new CommandTopicPartition(opts);
             if (Topic.hasCollisionChars(topic.name)) {
                 System.out.println("WARNING: Due to limitations in metric names, topics with a period ('.') or underscore ('_') could " +
@@ -458,7 +442,7 @@ public abstract class TopicCommand {
             createTopic(topic);
         }
 
-        public void createTopic(CommandTopicPartition topic) throws Exception {
+        private void createTopic(CommandTopicPartition topic) throws Exception {
             if (topic.replicationFactor.filter(rf -> rf > Short.MAX_VALUE || rf < 1).isPresent()) {
                 throw new IllegalArgumentException("The replication factor must be between 1 and " + Short.MAX_VALUE + " inclusive");
             }
@@ -467,18 +451,15 @@ public abstract class TopicCommand {
             }
 
             try {
-                NewTopic newTopic;
-                if (topic.hasReplicaAssignment()) {
-                    newTopic = new NewTopic(topic.name, topic.replicaAssignment);
-                } else {
-                    newTopic = new NewTopic(topic.name, topic.partitions, topic.replicationFactor.map(Integer::shortValue));
-                }
+                NewTopic newTopic = topic.hasReplicaAssignment()
+                    ? new NewTopic(topic.name, topic.replicaAssignment)
+                    : new NewTopic(topic.name, topic.partitions, topic.replicationFactor.map(Integer::shortValue));
 
                 Map<String, String> configsMap = topic.configsToAdd.stringPropertyNames().stream()
-                    .collect(Collectors.toMap(name -> name, name -> topic.configsToAdd.getProperty(name)));
+                    .collect(Collectors.toMap(name -> name, topic.configsToAdd::getProperty));
 
                 newTopic.configs(configsMap);
-                CreateTopicsResult createResult = adminClient.createTopics(Collections.singleton(newTopic),
+                CreateTopicsResult createResult = adminClient.createTopics(Set.of(newTopic),
                     new CreateTopicsOptions().retryOnQuotaViolation(false));
                 createResult.all().get();
                 System.out.println("Created topic " + topic.name + ".");
@@ -492,14 +473,12 @@ public abstract class TopicCommand {
             }
         }
 
-        public void listTopics(TopicCommandOptions opts) throws ExecutionException, InterruptedException {
-            String results = getTopics(opts.topic(), opts.excludeInternalTopics())
-                .stream()
-                .collect(Collectors.joining("\n"));
+        void listTopics(TopicCommandOptions opts) throws ExecutionException, InterruptedException {
+            String results = String.join("\n", getTopics(opts.topic(), opts.excludeInternalTopics()));
             System.out.println(results);
         }
 
-        public void alterTopic(TopicCommandOptions opts) throws ExecutionException, InterruptedException {
+        void alterTopic(TopicCommandOptions opts) throws ExecutionException, InterruptedException {
             CommandTopicPartition topic = new CommandTopicPartition(opts);
             List<String> topics = getTopics(opts.topic(), opts.excludeInternalTopics());
             ensureTopicExists(topics, opts.topic(), !opts.ifExists());
@@ -532,14 +511,14 @@ public abstract class TopicCommand {
             return new AbstractMap.SimpleEntry<>(topicName, NewPartitions.increaseTo(topic.partitions.get()));
         }
 
-        public Map<TopicPartition, PartitionReassignment> listAllReassignments(Set<TopicPartition> topicPartitions) {
+        Map<TopicPartition, PartitionReassignment> listAllReassignments(Set<TopicPartition> topicPartitions) {
             try {
                 return adminClient.listPartitionReassignments(topicPartitions).reassignments().get();
             } catch (ExecutionException e) {
                 Throwable cause = e.getCause();
                 if (cause instanceof UnsupportedVersionException || cause instanceof ClusterAuthorizationException) {
                     LOG.debug("Couldn't query reassignments through the AdminClient API: " + cause.getMessage(), cause);
-                    return Collections.emptyMap();
+                    return Map.of();
                 } else {
                     throw new RuntimeException(e);
                 }
@@ -548,7 +527,7 @@ public abstract class TopicCommand {
             }
         }
 
-        public void describeTopic(TopicCommandOptions opts) throws ExecutionException, InterruptedException {
+        void describeTopic(TopicCommandOptions opts) throws ExecutionException, InterruptedException {
             // If topicId is provided and not zero, will use topicId regardless of topic name
             Optional<Uuid> inputTopicId = opts.topicId()
                 .map(Uuid::fromString).filter(uuid -> !uuid.equals(Uuid.ZERO_UUID));
@@ -558,9 +537,9 @@ public abstract class TopicCommand {
             List<String> topics;
             if (useTopicId) {
                 topicIds = getTopicIds(inputTopicId.get(), opts.excludeInternalTopics());
-                topics = Collections.emptyList();
+                topics = List.of();
             } else {
-                topicIds = Collections.emptyList();
+                topicIds = List.of();
                 topics = getTopics(opts.topic(), opts.excludeInternalTopics());
             }
 
@@ -588,7 +567,7 @@ public abstract class TopicCommand {
 
             List<String> topicNames = topicDescriptions.stream()
                 .map(org.apache.kafka.clients.admin.TopicDescription::name)
-                .collect(Collectors.toList());
+                .toList();
             Map<ConfigResource, KafkaFuture<Config>> allConfigs = adminClient.describeConfigs(
                 topicNames.stream()
                     .map(name -> new ConfigResource(ConfigResource.Type.TOPIC, name))
@@ -596,7 +575,7 @@ public abstract class TopicCommand {
             ).values();
             List<Integer> liveBrokers = adminClient.describeCluster().nodes().get().stream()
                 .map(Node::id)
-                .collect(Collectors.toList());
+                .toList();
             DescribeOptions describeOptions = new DescribeOptions(opts, new HashSet<>(liveBrokers));
             Set<TopicPartition> topicPartitions = topicDescriptions
                 .stream()
@@ -606,53 +585,54 @@ public abstract class TopicCommand {
             Map<TopicPartition, PartitionReassignment> reassignments = listAllReassignments(topicPartitions);
             for (org.apache.kafka.clients.admin.TopicDescription td : topicDescriptions) {
                 String topicName = td.name();
-                Uuid topicId = td.topicId();
                 Config config = allConfigs.get(new ConfigResource(ConfigResource.Type.TOPIC, topicName)).get();
                 ArrayList<TopicPartitionInfo> sortedPartitions = new ArrayList<>(td.partitions());
                 sortedPartitions.sort(Comparator.comparingInt(TopicPartitionInfo::partition));
-                printDescribeConfig(opts, describeOptions, reassignments, td, topicName, topicId, config, sortedPartitions);
+                printDescribeConfig(opts, describeOptions, reassignments, td, topicName, td.topicId(), config, sortedPartitions);
                 printPartitionDescription(describeOptions, reassignments, td, topicName, config, sortedPartitions);
             }
         }
 
-        private void printPartitionDescription(DescribeOptions describeOptions, Map<TopicPartition, PartitionReassignment> reassignments, org.apache.kafka.clients.admin.TopicDescription td, String topicName, Config config, ArrayList<TopicPartitionInfo> sortedPartitions) {
+        private void printPartitionDescription(DescribeOptions describeOptions, Map<TopicPartition, PartitionReassignment> reassignments,
+                                               org.apache.kafka.clients.admin.TopicDescription td, String topicName, Config config,
+                                               ArrayList<TopicPartitionInfo> sortedPartitions) {
             if (describeOptions.describePartitions) {
                 for (TopicPartitionInfo partition : sortedPartitions) {
                     PartitionReassignment reassignment =
                         reassignments.get(new TopicPartition(td.name(), partition.partition()));
                     PartitionDescription partitionDesc = new PartitionDescription(topicName,
-                        partition, config, false, reassignment);
+                        partition, config, reassignment);
                     describeOptions.maybePrintPartitionDescription(partitionDesc);
                 }
             }
         }
 
-        private void printDescribeConfig(TopicCommandOptions opts, DescribeOptions describeOptions, Map<TopicPartition, PartitionReassignment> reassignments, org.apache.kafka.clients.admin.TopicDescription td, String topicName, Uuid topicId, Config config, ArrayList<TopicPartitionInfo> sortedPartitions) {
+        private void printDescribeConfig(TopicCommandOptions opts, DescribeOptions describeOptions, Map<TopicPartition, PartitionReassignment> reassignments,
+                                         org.apache.kafka.clients.admin.TopicDescription td, String topicName, Uuid topicId,
+                                         Config config, ArrayList<TopicPartitionInfo> sortedPartitions) {
             if (describeOptions.describeConfigs) {
                 List<ConfigEntry> entries = new ArrayList<>(config.entries());
                 boolean hasNonDefault = entries.stream().anyMatch(e -> !e.isDefault());
                 if (!opts.reportOverriddenConfigs() || hasNonDefault) {
-                    int numPartitions = td.partitions().size();
                     TopicPartitionInfo firstPartition = sortedPartitions.get(0);
                     PartitionReassignment reassignment =
                         reassignments.get(new TopicPartition(td.name(), firstPartition.partition()));
                     TopicDescription topicDesc = new TopicDescription(topicName, topicId,
-                        numPartitions, getReplicationFactor(firstPartition, reassignment),
-                        config, false);
+                        td.partitions().size(), getReplicationFactor(firstPartition, reassignment), config);
                     topicDesc.printDescription();
                 }
             }
         }
 
-        public void deleteTopic(TopicCommandOptions opts) throws ExecutionException, InterruptedException {
+        void deleteTopic(TopicCommandOptions opts) throws ExecutionException, InterruptedException {
             List<String> topics = getTopics(opts.topic(), opts.excludeInternalTopics());
             ensureTopicExists(topics, opts.topic(), !opts.ifExists());
-            adminClient.deleteTopics(Collections.unmodifiableList(topics),
+            adminClient.deleteTopics(List.copyOf(topics),
                 new DeleteTopicsOptions().retryOnQuotaViolation(false)
             ).all().get();
         }
 
-        public List<String> getTopics(Optional<String> topicIncludeList, boolean excludeInternalTopics) throws ExecutionException, InterruptedException {
+        List<String> getTopics(Optional<String> topicIncludeList, boolean excludeInternalTopics) throws ExecutionException, InterruptedException {
             ListTopicsOptions listTopicsOptions = new ListTopicsOptions();
             if (!excludeInternalTopics) {
                 listTopicsOptions.listInternal(true);
@@ -662,16 +642,16 @@ public abstract class TopicCommand {
             return doGetTopics(allTopics.stream().sorted().collect(Collectors.toList()), topicIncludeList, excludeInternalTopics);
         }
 
-        public List<Uuid> getTopicIds(Uuid topicIdIncludeList, boolean excludeInternalTopics) throws ExecutionException, InterruptedException {
+        private List<Uuid> getTopicIds(Uuid topicIdIncludeList, boolean excludeInternalTopics) throws ExecutionException, InterruptedException {
             ListTopicsResult allTopics = excludeInternalTopics ? adminClient.listTopics() :
                 adminClient.listTopics(new ListTopicsOptions().listInternal(true));
             List<Uuid> allTopicIds = allTopics.listings().get().stream()
                 .map(TopicListing::topicId)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
             return allTopicIds.contains(topicIdIncludeList) ?
-                Collections.singletonList(topicIdIncludeList) :
-                Collections.emptyList();
+                List.of(topicIdIncludeList) :
+                List.of();
         }
 
         @Override
@@ -680,7 +660,7 @@ public abstract class TopicCommand {
         }
     }
 
-    public static final class TopicCommandOptions extends CommandDefaultOptions {
+    static final class TopicCommandOptions extends CommandDefaultOptions {
         private final ArgumentAcceptingOptionSpec<String> bootstrapServerOpt;
 
         private final ArgumentAcceptingOptionSpec<String> commandConfigOpt;
@@ -698,8 +678,6 @@ public abstract class TopicCommand {
         private final ArgumentAcceptingOptionSpec<String> topicOpt;
 
         private final ArgumentAcceptingOptionSpec<String> topicIdOpt;
-
-        private final String nl;
 
         private static final String KAFKA_CONFIGS_CLI_SUPPORTS_ALTERING_TOPIC_CONFIGS =
                 " (To alter topic configurations, the kafka-configs tool can be used.)";
@@ -740,7 +718,7 @@ public abstract class TopicCommand {
 
         private final Set<OptionSpecBuilder> allReplicationReportOpts;
 
-        public TopicCommandOptions(String[] args) {
+        TopicCommandOptions(String[] args) {
             super(args);
             bootstrapServerOpt = parser.accepts("bootstrap-server", "REQUIRED: The Kafka server to connect to.")
                 .withRequiredArg()
@@ -758,8 +736,7 @@ public abstract class TopicCommand {
                     KAFKA_CONFIGS_CLI_SUPPORTS_ALTERING_TOPIC_CONFIGS);
             describeOpt = parser.accepts("describe", "List details for the given topics.");
             topicOpt = parser.accepts("topic", "The topic to create, alter, describe or delete. It also accepts a regular " +
-                            "expression, except for --create option. Put topic name in double quotes and use the '\\' prefix " +
-                            "to escape regular expression symbols; e.g. \"test\\.topic\".")
+                            "expression, except for --create option.")
                 .withRequiredArg()
                 .describedAs("topic")
                 .ofType(String.class);
@@ -767,7 +744,7 @@ public abstract class TopicCommand {
                 .withRequiredArg()
                 .describedAs("topic-id")
                 .ofType(String.class);
-            nl = System.lineSeparator();
+            String nl = System.lineSeparator();
 
             String logConfigNames = LogConfig.nonInternalConfigNames().stream().map(config -> "\t" + config).collect(Collectors.joining(nl));
             configOpt = parser.accepts("config",  "A topic configuration override for the topic being created." +
@@ -826,136 +803,113 @@ public abstract class TopicCommand {
             checkArgs();
         }
 
-        public boolean has(OptionSpec<?> builder) {
+        boolean has(OptionSpec<?> builder) {
             return options.has(builder);
         }
 
-        public <A> Optional<A> valueAsOption(OptionSpec<A> option) {
-            return valueAsOption(option, Optional.empty());
+        <A> Optional<A> valueAsOption(OptionSpec<A> option) {
+            return has(option) ? Optional.of(options.valueOf(option)) : Optional.empty();
         }
 
-        public <A> Optional<List<A>> valuesAsOption(OptionSpec<A> option) {
-            return valuesAsOption(option, Collections.emptyList());
-        }
-
-        public <A> Optional<A> valueAsOption(OptionSpec<A> option, Optional<A> defaultValue) {
-            if (has(option)) {
-                return Optional.of(options.valueOf(option));
-            } else {
-                return defaultValue;
-            }
-        }
-
-        public <A> Optional<List<A>> valuesAsOption(OptionSpec<A> option, List<A> defaultValue) {
-            return options.has(option) ? Optional.of(options.valuesOf(option)) : Optional.of(defaultValue);
-        }
-
-        public boolean hasCreateOption() {
+        boolean hasCreateOption() {
             return has(createOpt);
         }
 
-        public boolean hasAlterOption() {
+        boolean hasAlterOption() {
             return has(alterOpt);
         }
 
-        public boolean hasListOption() {
+        boolean hasListOption() {
             return has(listOpt);
         }
 
-        public boolean hasDescribeOption() {
+        boolean hasDescribeOption() {
             return has(describeOpt);
         }
 
-        public boolean hasDeleteOption() {
+        boolean hasDeleteOption() {
             return has(deleteOpt);
         }
 
-        public Optional<String> bootstrapServer() {
+        Optional<String> bootstrapServer() {
             return valueAsOption(bootstrapServerOpt);
         }
 
-        public Properties commandConfig() throws IOException {
-            if (has(commandConfigOpt)) {
-                return Utils.loadProps(options.valueOf(commandConfigOpt));
-            } else {
-                return new Properties();
-            }
+        Properties commandConfig() throws IOException {
+            return has(commandConfigOpt) ? Utils.loadProps(options.valueOf(commandConfigOpt)) : new Properties();
         }
 
-        public Optional<String> topic() {
+        Optional<String> topic() {
             return valueAsOption(topicOpt);
         }
 
-        public Optional<String> topicId() {
+        Optional<String> topicId() {
             return valueAsOption(topicIdOpt);
         }
 
-        public Optional<Integer> partitions() {
+        Optional<Integer> partitions() {
             return valueAsOption(partitionsOpt);
         }
 
-        public Optional<Integer> replicationFactor() {
+        Optional<Integer> replicationFactor() {
             return valueAsOption(replicationFactorOpt);
         }
 
-        public Optional<Map<Integer, List<Integer>>> replicaAssignment() {
-            if (has(replicaAssignmentOpt) && !Optional.of(options.valueOf(replicaAssignmentOpt)).orElse("").isEmpty())
-                return Optional.of(parseReplicaAssignment(options.valueOf(replicaAssignmentOpt)));
-            else
-                return Optional.empty();
+        Optional<Map<Integer, List<Integer>>> replicaAssignment() {
+            return has(replicaAssignmentOpt) && !Optional.of(options.valueOf(replicaAssignmentOpt)).orElse("").isEmpty()
+                ? Optional.of(parseReplicaAssignment(options.valueOf(replicaAssignmentOpt)))
+                : Optional.empty();
         }
 
-        public boolean reportUnderReplicatedPartitions() {
+        boolean reportUnderReplicatedPartitions() {
             return has(reportUnderReplicatedPartitionsOpt);
         }
 
-        public boolean reportUnavailablePartitions() {
+        boolean reportUnavailablePartitions() {
             return has(reportUnavailablePartitionsOpt);
         }
 
-        public boolean reportUnderMinIsrPartitions() {
+        boolean reportUnderMinIsrPartitions() {
             return has(reportUnderMinIsrPartitionsOpt);
         }
 
-        public boolean reportAtMinIsrPartitions() {
+        boolean reportAtMinIsrPartitions() {
             return has(reportAtMinIsrPartitionsOpt);
         }
 
-        public boolean reportOverriddenConfigs() {
+        boolean reportOverriddenConfigs() {
             return has(topicsWithOverridesOpt);
         }
 
-        public boolean ifExists() {
+        boolean ifExists() {
             return has(ifExistsOpt);
         }
 
-        public boolean ifNotExists() {
+        boolean ifNotExists() {
             return has(ifNotExistsOpt);
         }
 
-        public boolean excludeInternalTopics() {
+        boolean excludeInternalTopics() {
             return has(excludeInternalTopicOpt);
         }
 
-        public Optional<Integer> partitionSizeLimitPerResponse() {
+        Optional<Integer> partitionSizeLimitPerResponse() {
             return valueAsOption(partitionSizeLimitPerResponseOpt);
         }
 
-        public Optional<List<String>> topicConfig() {
-            return valuesAsOption(configOpt);
+        Optional<List<String>> topicConfig() {
+            return options.has(configOpt) ? Optional.of(options.valuesOf(configOpt)) : Optional.of(List.of());
         }
 
-        public void checkArgs() {
+        private void checkArgs() {
             if (args.length == 0)
                 CommandLineUtils.printUsageAndExit(parser, "Create, delete, describe, or change a topic.");
 
             CommandLineUtils.maybePrintHelpOrVersion(this, "This tool helps to create, delete, describe, or change a topic.");
 
             // should have exactly one action
-            long actions =
-                Arrays.asList(createOpt, listOpt, alterOpt, describeOpt, deleteOpt)
-                    .stream().filter(options::has)
-                    .count();
+            long actions = Stream.of(createOpt, listOpt, alterOpt, describeOpt, deleteOpt).filter(options::has).count();
+
             if (actions != 1)
                 CommandLineUtils.printUsageAndExit(parser, "Command must include exactly one action: --list, --describe, --create, --alter or --delete");
 
@@ -989,29 +943,28 @@ public abstract class TopicCommand {
 
         private void checkInvalidArgs() {
             // check invalid args
-            CommandLineUtils.checkInvalidArgs(parser, options, configOpt, invalidOptions(Arrays.asList(alterOpt, createOpt)));
-            CommandLineUtils.checkInvalidArgs(parser, options, partitionsOpt, invalidOptions(Arrays.asList(alterOpt, createOpt)));
-            CommandLineUtils.checkInvalidArgs(parser, options, replicationFactorOpt, invalidOptions(Arrays.asList(createOpt)));
-            CommandLineUtils.checkInvalidArgs(parser, options, replicaAssignmentOpt, invalidOptions(Arrays.asList(alterOpt, createOpt)));
+            CommandLineUtils.checkInvalidArgs(parser, options, configOpt, invalidOptions(List.of(alterOpt, createOpt)));
+            CommandLineUtils.checkInvalidArgs(parser, options, partitionsOpt, invalidOptions(List.of(alterOpt, createOpt)));
+            CommandLineUtils.checkInvalidArgs(parser, options, replicationFactorOpt, invalidOptions(List.of(createOpt)));
+            CommandLineUtils.checkInvalidArgs(parser, options, replicaAssignmentOpt, invalidOptions(List.of(alterOpt, createOpt)));
             if (options.has(createOpt)) {
                 CommandLineUtils.checkInvalidArgs(parser, options, replicaAssignmentOpt, partitionsOpt, replicationFactorOpt);
             }
 
-
             CommandLineUtils.checkInvalidArgs(parser, options, reportUnderReplicatedPartitionsOpt,
-                invalidOptions(Collections.singleton(topicsWithOverridesOpt), Arrays.asList(describeOpt, reportUnderReplicatedPartitionsOpt)));
+                invalidOptions(Set.of(topicsWithOverridesOpt), List.of(describeOpt, reportUnderReplicatedPartitionsOpt)));
             CommandLineUtils.checkInvalidArgs(parser, options, reportUnderMinIsrPartitionsOpt,
-                invalidOptions(Collections.singleton(topicsWithOverridesOpt), Arrays.asList(describeOpt, reportUnderMinIsrPartitionsOpt)));
+                invalidOptions(Set.of(topicsWithOverridesOpt), List.of(describeOpt, reportUnderMinIsrPartitionsOpt)));
             CommandLineUtils.checkInvalidArgs(parser, options, reportAtMinIsrPartitionsOpt,
-                invalidOptions(Collections.singleton(topicsWithOverridesOpt), Arrays.asList(describeOpt, reportAtMinIsrPartitionsOpt)));
+                invalidOptions(Set.of(topicsWithOverridesOpt), List.of(describeOpt, reportAtMinIsrPartitionsOpt)));
             CommandLineUtils.checkInvalidArgs(parser, options, reportUnavailablePartitionsOpt,
-                invalidOptions(Collections.singleton(topicsWithOverridesOpt), Arrays.asList(describeOpt, reportUnavailablePartitionsOpt)));
+                invalidOptions(Set.of(topicsWithOverridesOpt), List.of(describeOpt, reportUnavailablePartitionsOpt)));
             CommandLineUtils.checkInvalidArgs(parser, options, topicsWithOverridesOpt,
-                invalidOptions(new HashSet<>(allReplicationReportOpts), Arrays.asList(describeOpt)));
+                invalidOptions(new HashSet<>(allReplicationReportOpts), List.of(describeOpt)));
             CommandLineUtils.checkInvalidArgs(parser, options, ifExistsOpt,
-                invalidOptions(Arrays.asList(alterOpt, deleteOpt, describeOpt)));
-            CommandLineUtils.checkInvalidArgs(parser, options, ifNotExistsOpt, invalidOptions(Arrays.asList(createOpt)));
-            CommandLineUtils.checkInvalidArgs(parser, options, excludeInternalTopicOpt, invalidOptions(Arrays.asList(listOpt, describeOpt)));
+                invalidOptions(List.of(alterOpt, deleteOpt, describeOpt)));
+            CommandLineUtils.checkInvalidArgs(parser, options, ifNotExistsOpt, invalidOptions(List.of(createOpt)));
+            CommandLineUtils.checkInvalidArgs(parser, options, excludeInternalTopicOpt, invalidOptions(List.of(listOpt, describeOpt)));
         }
 
         private Set<OptionSpec<?>> invalidOptions(List<OptionSpec<?>> removeOptions) {
