@@ -34,20 +34,27 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.Files;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Map;
 
-import static java.util.Arrays.asList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class ConsoleProducerTest {
-    private static final String[] BOOTSTRAP_SERVER_VALID_ARGS = new String[]{
+    private static final String[] BOOTSTRAP_SERVER_VALID_ARGS_DEPRECATED = new String[]{
         "--bootstrap-server", "localhost:1003,localhost:1004",
         "--topic", "t3",
         "--property", "parse.key=true",
         "--property", "key.separator=#"
+    };
+    private static final String[] BOOTSTRAP_SERVER_VALID_ARGS = new String[]{
+        "--bootstrap-server", "localhost:1003,localhost:1004",
+        "--topic", "t3",
+        "--reader-property", "parse.key=true",
+        "--reader-property", "key.separator=#"
     };
     private static final String[] INVALID_ARGS = new String[]{
         "--t", // not a valid argument
@@ -57,10 +64,15 @@ public class ConsoleProducerTest {
         "--bootstrap-server", "localhost:1002",
         "--topic", "t3",
     };
-    private static final String[] CLIENT_ID_OVERRIDE = new String[]{
+    private static final String[] CLIENT_ID_OVERRIDE_DEPRECATED = new String[]{
         "--bootstrap-server", "localhost:1001",
         "--topic", "t3",
         "--producer-property", "client.id=producer-1"
+    };
+    private static final String[] CLIENT_ID_OVERRIDE = new String[]{
+        "--bootstrap-server", "localhost:1001",
+        "--topic", "t3",
+        "--command-property", "client.id=producer-1"
     };
     private static final String[] BATCH_SIZE_OVERRIDDEN_BY_MAX_PARTITION_MEMORY_BYTES_VALUE = new String[]{
         "--bootstrap-server", "localhost:1002",
@@ -93,7 +105,7 @@ public class ConsoleProducerTest {
         ConsoleProducerOptions opts = new ConsoleProducerOptions(BOOTSTRAP_SERVER_VALID_ARGS);
         ProducerConfig producerConfig = new ProducerConfig(opts.producerProps());
 
-        assertEquals(asList("localhost:1003", "localhost:1004"), producerConfig.getList(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG));
+        assertEquals(List.of("localhost:1003", "localhost:1004"), producerConfig.getList(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG));
     }
 
     @Test
@@ -109,8 +121,8 @@ public class ConsoleProducerTest {
     }
 
     @Test
-    public void testParseKeyProp() throws ReflectiveOperationException, IOException {
-        ConsoleProducerOptions opts = new ConsoleProducerOptions(BOOTSTRAP_SERVER_VALID_ARGS);
+    public void testParseKeyPropDeprecated() throws ReflectiveOperationException, IOException {
+        ConsoleProducerOptions opts = new ConsoleProducerOptions(BOOTSTRAP_SERVER_VALID_ARGS_DEPRECATED);
         LineMessageReader reader = (LineMessageReader) Class.forName(opts.readerClass()).getDeclaredConstructor().newInstance();
         reader.configure(opts.readerProps());
 
@@ -119,7 +131,7 @@ public class ConsoleProducerTest {
     }
 
     @Test
-    public void testParseReaderConfigFile() throws Exception {
+    public void testParseReaderConfigFileDeprecated() throws Exception {
         File propsFile = TestUtils.tempFile();
         OutputStream propsStream = Files.newOutputStream(propsFile.toPath());
         propsStream.write("parse.key=true\n".getBytes());
@@ -147,12 +159,12 @@ public class ConsoleProducerTest {
         ConsoleProducerOptions opts = new ConsoleProducerOptions(BOOTSTRAP_SERVER_OVERRIDE);
         ProducerConfig producerConfig = new ProducerConfig(opts.producerProps());
 
-        assertEquals(Collections.singletonList("localhost:1002"), producerConfig.getList(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG));
+        assertEquals(List.of("localhost:1002"), producerConfig.getList(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG));
     }
 
     @Test
-    public void testClientIdOverride() throws IOException {
-        ConsoleProducerOptions opts = new ConsoleProducerOptions(CLIENT_ID_OVERRIDE);
+    public void testClientIdOverrideDeprecated() throws IOException {
+        ConsoleProducerOptions opts = new ConsoleProducerOptions(CLIENT_ID_OVERRIDE_DEPRECATED);
         ProducerConfig producerConfig = new ProducerConfig(opts.producerProps());
 
         assertEquals("producer-1", producerConfig.getString(ProducerConfig.CLIENT_ID_CONFIG));
@@ -164,6 +176,40 @@ public class ConsoleProducerTest {
         ProducerConfig producerConfig = new ProducerConfig(opts.producerProps());
 
         assertEquals("console-producer", producerConfig.getString(ProducerConfig.CLIENT_ID_CONFIG));
+    }
+
+    @Test
+    public void testParseKeyProp() throws ReflectiveOperationException, IOException {
+        ConsoleProducerOptions opts = new ConsoleProducerOptions(BOOTSTRAP_SERVER_VALID_ARGS);
+        LineMessageReader reader = (LineMessageReader) Class.forName(opts.readerClass()).getDeclaredConstructor().newInstance();
+        reader.configure(opts.readerProps());
+
+        assertEquals("#", reader.keySeparator());
+        assertTrue(reader.parseKey());
+    }
+
+    @Test
+    public void testParseReaderConfigFile() throws Exception {
+        File propsFile = TestUtils.tempFile();
+        OutputStream propsStream = Files.newOutputStream(propsFile.toPath());
+        propsStream.write("parse.key=true\n".getBytes());
+        propsStream.write("key.separator=|".getBytes());
+        propsStream.close();
+
+        String[] args = new String[]{
+            "--bootstrap-server", "localhost:9092",
+            "--topic", "test",
+            "--reader-property", "key.separator=;",
+            "--reader-property", "parse.headers=true",
+            "--reader-config", propsFile.getAbsolutePath()
+        };
+        ConsoleProducerOptions opts = new ConsoleProducerOptions(args);
+        LineMessageReader reader = (LineMessageReader) Class.forName(opts.readerClass()).getDeclaredConstructor().newInstance();
+        reader.configure(opts.readerProps());
+
+        assertEquals(";", reader.keySeparator());
+        assertTrue(reader.parseKey());
+        assertTrue(reader.parseHeaders());
     }
 
     @Test
@@ -220,6 +266,127 @@ public class ConsoleProducerTest {
 
         assertEquals(1, reader.configureCount());
         assertEquals(1, reader.closeCount());
+    }
+
+    @Test
+    public void shouldExitOnBothProducerPropertyAndCommandProperty() {
+        Exit.setExitProcedure((code, message) -> {
+            throw new IllegalArgumentException(message);
+        });
+
+        String[] args = new String[]{
+            "--bootstrap-server", "localhost:9092",
+            "--topic", "test",
+            "--producer-property", "acks=all",
+            "--command-property", "batch.size=16384"
+        };
+
+        try {
+            assertThrows(IllegalArgumentException.class, () -> new ConsoleProducerOptions(args));
+        } finally {
+            Exit.resetExitProcedure();
+        }
+    }
+
+    @Test
+    public void shouldExitOnBothProducerConfigAndCommandConfig() throws IOException {
+        Exit.setExitProcedure((code, message) -> {
+            throw new IllegalArgumentException(message);
+        });
+
+        Map<String, String> configs = new HashMap<>();
+        configs.put("acks", "all");
+        File propsFile = ToolsTestUtils.tempPropertiesFile(configs);
+
+        Map<String, String> configs2 = new HashMap<>();
+        configs2.put("batch.size", "16384");
+        File propsFile2 = ToolsTestUtils.tempPropertiesFile(configs2);
+
+        String[] args = new String[]{
+            "--bootstrap-server", "localhost:9092",
+            "--topic", "test",
+            "--producer.config", propsFile.getAbsolutePath(),
+            "--command-config", propsFile2.getAbsolutePath()
+        };
+
+        try {
+            assertThrows(IllegalArgumentException.class, () -> new ConsoleProducerOptions(args));
+        } finally {
+            Exit.resetExitProcedure();
+        }
+    }
+
+    @Test
+    public void shouldExitOnBothPropertyAndReaderProperty() {
+        Exit.setExitProcedure((code, message) -> {
+            throw new IllegalArgumentException(message);
+        });
+
+        String[] args = new String[]{
+            "--bootstrap-server", "localhost:9092",
+            "--topic", "test",
+            "--property", "parse.key=true",
+            "--reader-property", "parse.headers=true"
+        };
+
+        try {
+            assertThrows(IllegalArgumentException.class, () -> new ConsoleProducerOptions(args));
+        } finally {
+            Exit.resetExitProcedure();
+        }
+    }
+
+    @Test
+    public void testClientIdOverrideUsingCommandProperty() throws IOException {
+        ConsoleProducerOptions opts = new ConsoleProducerOptions(CLIENT_ID_OVERRIDE);
+        ProducerConfig producerConfig = new ProducerConfig(opts.producerProps());
+
+        assertEquals("producer-1", producerConfig.getString(ProducerConfig.CLIENT_ID_CONFIG));
+    }
+
+    @Test
+    public void testProducerConfigFromFileUsingCommandConfig() throws IOException {
+        Map<String, String> configs = new HashMap<>();
+        configs.put("acks", "all");
+        configs.put("batch.size", "32768");
+        File propsFile = ToolsTestUtils.tempPropertiesFile(configs);
+
+        String[] args = new String[]{
+            "--bootstrap-server", "localhost:9092",
+            "--topic", "test",
+            "--command-config", propsFile.getAbsolutePath()
+        };
+
+        ConsoleProducerOptions opts = new ConsoleProducerOptions(args);
+        ProducerConfig producerConfig = new ProducerConfig(opts.producerProps());
+
+        // "all" gets converted to "-1" internally by ProducerConfig
+        assertEquals("-1", producerConfig.getString(ProducerConfig.ACKS_CONFIG));
+        assertEquals(32768, producerConfig.getInt(ProducerConfig.BATCH_SIZE_CONFIG));
+    }
+
+    @Test
+    public void testCommandPropertyOverridesConfig() throws IOException {
+        Map<String, String> configs = new HashMap<>();
+        configs.put("acks", "1");
+        configs.put("batch.size", "16384");
+        File propsFile = ToolsTestUtils.tempPropertiesFile(configs);
+
+        String[] args = new String[]{
+            "--bootstrap-server", "localhost:9092",
+            "--topic", "test",
+            "--command-config", propsFile.getAbsolutePath(),
+            "--command-property", "acks=all"
+        };
+
+        ConsoleProducerOptions opts = new ConsoleProducerOptions(args);
+        ProducerConfig producerConfig = new ProducerConfig(opts.producerProps());
+
+        // Command property should override the config file value
+        // "all" gets converted to "-1" internally by ProducerConfig
+        assertEquals("-1", producerConfig.getString(ProducerConfig.ACKS_CONFIG));
+        // Config file value should still be present
+        assertEquals(16384, producerConfig.getInt(ProducerConfig.BATCH_SIZE_CONFIG));
     }
 
     public static class TestRecordReader implements RecordReader {
