@@ -55,7 +55,6 @@ import org.slf4j.LoggerFactory;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -471,9 +470,7 @@ public class CoordinatorClient {
             return "No matching tasks found.";
         }
         List<List<String>> lines = new ArrayList<>();
-        List<String> header = new ArrayList<>(
-            Arrays.asList("ID", "TYPE", "STATE", "INFO"));
-        lines.add(header);
+        lines.add(List.of("ID", "TYPE", "STATE", "INFO"));
         for (Map.Entry<String, TaskState> entry : response.tasks().entrySet()) {
             String taskId = entry.getKey();
             TaskState taskState = entry.getValue();
