@@ -18,7 +18,6 @@
 package org.apache.kafka.trogdor.workload;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -175,7 +174,7 @@ public class Histogram {
     private List<PercentileSummary> summarizePercentiles(int[] countsCopy, float[] percentiles,
                                                          long numSamples) {
         if (percentiles.length == 0) {
-            return Collections.emptyList();
+            return List.of();
         }
         List<PercentileSummary> summaries = new ArrayList<>(percentiles.length);
         int i = 0, j = 0;
